# sperner

./: .gitignore  LICENSE  README.md  app.py  equilib_login.py  generate_sperner_dataset.py  publish_to_hf.py  pyproject.toml  requirements.txt  sperner_dataset.json  topo_align_showcase.ipynb
.github/workflows/: publish.yml  test.yml
data/: sperner_dataset.json
docs/: API_REFERENCE.md  MODEL_CARD_INTEGRATION.md
equilib/: __init__.py  adaptive_topo_align.py  analytics.py  human_ui.py  ndim_solver.py  ndim_topo_align.py  plotting.py  rlhf_steering_demo.py  sperner_trainer.py  surrogate_solver.py  surrogate_topo_align.py  topo_align.py
examples/: README.md  generate_sperner_dataset.py  moe_routing_example.py  surrogate_example.py
notebooks/: topo_align_showcase.ipynb
scripts/: publish_to_hf.py
tests/: benchmark_topo_align.py  conftest.py  test_integration.py  test_moe_router.py  test_ndim_solver.py
