[project]
name = "topo-align"
version = "0.1.0"
description = "Gradient-free multi-objective alignment via Sperner's Lemma and implicit Freudenthal triangulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "transformers>=4.30",
    "peft>=0.5",
    "streamlit>=1.28",
    "asttokens>=3.0.1",
    "comm>=0.2.2",
    "cycler>=0.12.1",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["equilib"]
