[project]
name = "equilib"
version = "0.1.0"
description = "Gradient-free multi-objective alignment via Sperner's Lemma and implicit Freudenthal triangulation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oussama Mesbah", email = "omesbah@users.noreply.github.com"}
]
keywords = ["pytorch", "alignment", "multi-objective", "sperner", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "transformers>=4.30",
    "peft>=0.5",
    "streamlit>=1.28",
    "requests>=2.28",
    "asttokens>=3.0.1",
    "comm>=0.2.2",
    "cycler>=0.12.1",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/omesbah/equilib"
Repository = "https://github.com/omesbah/equilib"

[tool.hatch.build.targets.wheel]
packages = ["equilib"]
